<resources>
    <string name="app_name">Sky Scout</string>
    <string name="main_start">Start</string>
    <string name="main_settings">Settings</string>
    <string name="dark_mode_settings">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="settings_apply">Apply</string>
    <string name="settings_scouting_position">Scouting Position</string>
    <string name="game_scout_info">Info</string>
    <string name="game_scout_auton">Auton</string>
    <string name="game_scout_teleop">Teleop</string>
    <string name="settings_competition">Competition</string>
    <string name="main_suggestion">Suggestions</string>
    <string name="suggestions_your_name">Your Name</string>
    <string name="suggestions">Suggestion</string>
    <string name="suggestions_submit">Submit</string>
    <string name="auton_fragment_auton">AUTON</string>
    <string name="teleop_fragment_teleop">TELEOP</string>
    <string name="info_scout_info">INFO</string>
    <string name="info_fragment_your_name">Your Name</string>
    <string name="info_fragment_match_number">Match Number</string>
    <string name="info_fragment_team_number">Team Number</string>
    <string name="info_fragment_robot_breakdown">Robot Breakdown</string>
    <string name="info_fragment_notes">Notes</string>
    <string name="info_fragment_submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teleop_fragment_speaker_shot_scored">Speaker Scored - %1$d</string>
    <string name="teleop_fragment_speaker_shot_failed">Speaker Failed - %1$d</string>
    <string name="teleop_fragment_amp_shot_scored">Amp Scored - %1$d</string>
    <string name="teleop_fragment_amp_shot_failed">Amp Failed - %1$d</string>
    <string name="auton_fragment_amp_scored">Amp Scored - %1$d</string>
    <string name="auton_fragment_amp_failed">Amp Failed - %1$d</string>
    <string name="teleop_fragment_undo">Undo</string>
    <string name="speaker_shot_fragment_cancel">Cancel</string>
    <string name="speaker_shot_fragment_missed">Missed</string>
    <string name="speaker_shot_fragment_scored">Scored</string>
    <string name="speaker_shot_fragment_amplified">Amplified</string>
    <string name="teleop_fragment_trap_failed">Trap Failed - %1$d</string>
    <string name="teleop_fragment_trap_scored">Trap Scored - %1$d</string>
    <string name="teleop_fragment_parked">Parked</string>
    <string name="teleop_fragment_onstage">Onstage</string>
    <string name="teleop_fragment_spotlight">Spotlight</string>
    <string name="teleop_fragment_harmony">Harmony</string>
    <string name="auton_fragment_speaker_scored">Speaker Scored - %1$d</string>
    <string name="auton_fragment_speaker_failed">Speaker Failed - %1$d</string>
    <string name="auton_fragment_outside_wing">Outside Wing</string>
    <string name="speaker_shot_fragment_submit_shot">Submit Shot</string>
    <string name="scout_type_dialog_pit_scout">Pit Scout</string>
    <string name="scout_type_dialog_match_scout">Match Scout</string>
    <string name="pit_scout_team_number">Team Number</string>
    <string name="pit_scout_pit">PIT</string>
    <string name="pit_scout_width">Width</string>
    <string name="pit_scout_length">Length</string>
    <string name="pit_scout_height">Height</string>
    <string name="pit_scout_scoring">Scoring</string>
    <string name="pit_scout_intake">Intake</string>
    <string name="pit_scout_amp">Amp</string>
    <string name="pit_scout_speaker">Speaker</string>
    <string name="pit_scout_trap">Trap</string>
    <string name="pit_scout_source">Source</string>
    <string name="pit_scout_ground">Ground</string>
    <string name="pit_scout_shooter">Shooter</string>
    <string name="pit_scout_drivetrain">Drivetrain</string>
    <string name="pit_scout_fixed">Fixed</string>
    <string name="pit_scout_pivot">Pivoting</string>
    <string name="pit_scout_none">None</string>
    <string name="pit_scout_tank">Tank</string>
    <string name="pit_scout_swerve">Swerve</string>
    <string name="pit_scout_mecanum">Mecanum</string>
    <string name="pit_scout_climb">Climb</string>
    <string name="pit_scout_under_stage">Under Stage</string>
    <string name="pit_scout_harmonize">Harmony</string>
    <string name="pit_scout_notes">Notes</string>
    <string name="settings_start_gatt_server">Start Server</string>
    <string name="bluetooth_restart_app">Bluetooth not setup. Restart app.</string>
    <string name="teleop_fragment_note_shuttled">Note Shuttled - %1$d</string>
    <string name="info_fragment_defense_description">Defense Description</string>
</resources>