<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/layout_background"
    tools:context=".ui.PitScoutActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:textAlignment="center"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/pit_scout_pit"/>

    <EditText
        android:id="@+id/team_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="75dp"
        android:layout_marginVertical="50dp"
        android:imeOptions="actionDone"
        android:hint="@string/pit_scout_team_number"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/length_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginVertical="50dp"
        android:imeOptions="actionDone"
        android:hint="@string/pit_scout_length"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/team_number_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/width_input"/>
    <EditText
        android:id="@+id/width_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="50dp"
        android:imeOptions="actionDone"
        android:hint="@string/pit_scout_width"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/team_number_input"
        app:layout_constraintStart_toEndOf="@id/length_input"
        app:layout_constraintEnd_toStartOf="@id/height_input"/>
    <EditText
        android:id="@+id/height_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginVertical="50dp"
        android:imeOptions="actionDone"
        android:hint="@string/pit_scout_height"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/team_number_input"
        app:layout_constraintStart_toEndOf="@id/width_input"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/score_type_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/intake_ability_layout"
        app:layout_constraintTop_toBottomOf="@id/length_input"
        android:gravity="center">

        <TextView
            android:id="@+id/score_type_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"
            android:text="@string/pit_scout_scoring" />

        <CheckBox
            android:id="@+id/amp_checkbox"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/pit_scout_amp"/>

        <CheckBox
            android:id="@+id/speaker_checkbox"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/pit_scout_speaker"/>

        <CheckBox
            android:id="@+id/trap_checkbox"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/pit_scout_trap" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/intake_ability_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="50dp"
        app:layout_constraintStart_toEndOf="@id/score_type_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/length_input"
        android:gravity="center">

        <TextView
            android:id="@+id/intake_ability_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"
            android:text="@string/pit_scout_intake" />

        <CheckBox
            android:id="@+id/ground_intake_checkbox"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/pit_scout_ground"/>

        <CheckBox
            android:id="@+id/source_intake_checkbox"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/pit_scout_source"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shooter_type_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/score_type_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/drivetrain_type_layout">

        <TextView
            android:id="@+id/shooter_type_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"
            android:text="@string/pit_scout_shooter" />

        <RadioGroup
            android:id="@+id/shooter_type_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RadioButton
                android:id="@+id/shooter_fixed_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/pit_scout_fixed"/>

            <RadioButton
                android:id="@+id/shooter_turret_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/pit_scout_turret"/>

            <RadioButton
                android:id="@+id/shooter_none_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/pit_scout_none"/>

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/drivetrain_type_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/score_type_layout"
        app:layout_constraintStart_toEndOf="@id/shooter_type_layout"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/drivetrain_type_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"
            android:text="@string/pit_scout_drivetrain" />

        <RadioGroup
            android:id="@+id/drivetrain_type_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RadioButton
                android:id="@+id/drivetrain_tank_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/pit_scout_tank"/>

            <RadioButton
                android:id="@+id/drivetrain_swerve_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/pit_scout_swerve"/>

            <RadioButton
                android:id="@+id/drivetrain_mecanum_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/pit_scout_mecanum"/>

        </RadioGroup>


    </LinearLayout>

    <CheckBox
        android:id="@+id/climb_checkbox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/pit_scout_climb"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shooter_type_layout"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/offense_checkbox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/pit_Scout_offense"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/climb_checkbox"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/defense_checkbox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/pit_scout_defense"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/offense_checkbox"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/notes_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="75dp"
        android:layout_marginVertical="50dp"
        android:imeOptions="actionDone"
        android:hint="@string/pit_scout_notes"
        android:inputType="textNoSuggestions"
        android:textAlignment="center"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/defense_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_fragment_submit"
        android:textSize="20sp"
        android:textColor="@color/button_text"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="75dp"
        android:padding="15dp"
        android:backgroundTint="@color/submit_button"
        app:layout_constraintTop_toBottomOf="@id/notes_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@id/submit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>