<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AutonScoutFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/auton_fragment_auton"
        android:textSize="60sp"
        android:textAlignment="center"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/team_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_margin="20dp"

        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/speaker_shot_scored_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="75dp"
        android:layout_marginEnd="25dp"
        android:layout_marginVertical="50dp"
        android:backgroundTint="@color/button_green"
        android:padding="15dp"
        android:text="@string/auton_fragment_speaker_scored"
        android:textColor="@color/button_text"
        android:textSize="18sp"

        app:layout_constraintEnd_toStartOf="@id/speaker_shot_failed_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_number_label"

        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="0.5"/>

    <Button
        android:id="@+id/speaker_shot_failed_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="75dp"
        android:layout_marginStart="25dp"
        android:layout_marginVertical="50dp"
        android:backgroundTint="@color/button_orange"
        android:textColor="@color/button_text"
        android:padding="15dp"
        android:text="@string/auton_fragment_speaker_failed"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/speaker_shot_scored_button"
        app:layout_constraintTop_toBottomOf="@id/team_number_label"

        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="0.5"/>

    <Button
        android:id="@+id/amp_shot_scored_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="75dp"
        android:layout_marginEnd="25dp"
        android:layout_marginVertical="40dp"
        android:backgroundTint="@color/button_green"
        android:padding="15dp"
        android:text="@string/auton_fragment_amp_scored"
        android:textColor="@color/button_text"
        android:textSize="18sp"

        app:layout_constraintEnd_toStartOf="@id/amp_shot_failed_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speaker_shot_scored_button"

        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="0.5"/>

    <Button
        android:id="@+id/amp_shot_failed_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="75dp"
        android:layout_marginStart="25dp"
        android:layout_marginVertical="40dp"
        android:backgroundTint="@color/button_orange"
        android:textColor="@color/button_text"
        android:padding="15dp"
        android:text="@string/auton_fragment_amp_failed"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/amp_shot_scored_button"
        app:layout_constraintTop_toBottomOf="@id/speaker_shot_scored_button"

        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="0.5"/>

    <CheckBox
        android:id="@+id/left_wing_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/auton_fragment_outside_wing"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amp_shot_scored_button"/>



</androidx.constraintlayout.widget.ConstraintLayout>