<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SpeakerShotMapFragment">

    <ImageView
        android:id="@+id/field_map"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:src="@drawable/field_orientation_1"
        android:background="@drawable/map_background"
        android:layout_margin="25dp"
        android:padding="5dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/amplified_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/amplified_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/speaker_shot_fragment_amplified"
        android:layout_margin="40dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scored_button" />

    <Button
        android:id="@+id/scored_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="25dp"
        android:backgroundTint="@color/button_green"
        android:textColor="@color/button_text"
        android:padding="15dp"
        android:text="@string/speaker_shot_fragment_scored"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@id/missed_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/missed_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="25dp"
        android:backgroundTint="@color/button_orange"
        android:textColor="@color/button_text"
        android:padding="15dp"
        android:text="@string/speaker_shot_fragment_missed"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@id/cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="25dp"
        android:backgroundTint="@color/button_red"
        android:textColor="@color/button_text"
        android:padding="15dp"
        android:text="@string/speaker_shot_fragment_cancel"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>