<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="45sp"
        android:layout_marginVertical="35dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/position_entry_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_scouting_position"
        android:textSize="25sp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="50dp"
        android:textAlignment="center"

        app:layout_constraintTop_toBottomOf="@id/settings_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/position_entry"/>

    <EditText
        android:id="@+id/position_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="15dp"
        android:inputType="textCapCharacters"
        android:imeOptions="actionDone"
        android:textAllCaps="true"
        android:textAlignment="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/position_entry_label"/>

    <TextView
        android:id="@+id/competition_entry_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_competition"
        android:textSize="25sp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="50dp"
        android:textAlignment="center"

        app:layout_constraintTop_toBottomOf="@id/position_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/competition_entry"/>

    <EditText
        android:id="@+id/competition_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="15dp"
        android:inputType="textCapCharacters"
        android:imeOptions="actionDone"
        android:textAllCaps="true"
        android:textAlignment="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/competition_entry_label"/>

    <Button
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/suggestion_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="50dp"
        android:padding="15dp"
        android:text="@string/main_suggestion"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/competition_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_apply"
        android:textColor="@color/button_text"
        android:textSize="20sp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="25dp"
        android:padding="15dp"
        android:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>